[Fix] Footer overflow 문제 해결

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,6 @@ html {
 }
 
 html, body, #__next {
-  height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
